--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -42,6 +42,7 @@
                                         <p class="mbr-fonts-style display-5">Description: {{ selected_item['Description'] }}</p>
                                     </div>
                                     {% endif %}
+                                    {% if selected_item['Ingredients'] != false %}
                                     <div class="item-role px-2">
                                         <p class="mbr-text mbr-fonts-style display-5">
                                             {% for ingredient in selected_item['Ingredients'] %}
@@ -49,6 +50,7 @@
                                             {% endfor %}
                                         </p>
                                     </div>
+                                    {% endif %}
                                     <div class="item-role px-2">
                                         <p class="mbr-fonts-style display-5" id="the_price">Price: {% if portion == 'dinner' %}{{ selected_item['Base Price'] }}{% else %}{{ selected_item['Lunch_Version']['Base Price'] }}{% endif %}</p>
                                     </div>
