fixed double instantiation

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -69,7 +69,7 @@
 
                                         function ensure_2_decimals(price_string){
                                             console.log(price_string, typeof(price_string));
-                                            let price_string = price_string.toString();
+                                            price_string = price_string.toString();
 
                                             let dot_index = price_string.indexOf('.');
                                             if(price_string.slice(dot_index, price_string.length).length != 3){
