--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -97,7 +97,7 @@
                                                 console.log(base_price);
                                             } else {
                                                 //If it doesn't have a double 00, convert back to int
-                                                base_price = parseInt(base_price, 10);
+                                                base_price = parseFloat(base_price, 10);
                                             }
 
                                             //Parse the values for just the numeric value extra price
