--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -131,7 +131,7 @@
 
                                             let additional = topping + extra + (extra_rice * 2);
                                             //The cur_price updates to the new value, because the base_price is a float, we need to convert first
-                                            cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional) + base_price.toString().slice(base_price.toString().length - 3, base_price.toString().length);
+                                            cur_price.innerText = 'Price: ' + (parseFloat(base_price, 10) + additional) + base_price.toString().slice(base_price.toString().length - 3, base_price.toString().length);
                                         }
 
                                         //Auto convert page price if missing decimals
