removed pricing flaw

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -67,19 +67,6 @@
                                             return 0;
                                         }
 
-                                        function ensure_2_decimals(price_string){
-                                            console.log(price_string, typeof(price_string));
-                                            price_string = price_string.toString();
-
-                                            let dot_index = price_string.indexOf('.');
-                                            if(price_string.slice(dot_index, price_string.length).length != 3){
-                                                price_string += '0';
-                                                console.log('made change', price_string);
-                                            }
-
-                                            return price_string;
-                                        }
-
                                         function changePrice() {
                                             //Check IDs 'topping' 'extra' 'extra_rice'
                                             {% if portion == 'dinner' %}
@@ -91,14 +78,6 @@
 
                                             {% endif %}
 
-                                            //Test if the base price doesn't have 2 decimal places
-                                            base_price = ensure_2_decimals(base_price);
-                                            if(base_price.slice(base_price.length - 2, base_price.length) == '00'){
-                                                console.log(base_price);
-                                            } else {
-                                                //If it doesn't have a double 00, convert back to int
-                                                base_price = parseFloat(base_price, 10);
-                                            }
 
                                             //Parse the values for just the numeric value extra price
                                             let topping_elm, extra_elm, extra_rice_elm;
@@ -131,27 +110,8 @@
 
                                             let additional = topping + extra + (extra_rice * 2);
                                             //The cur_price updates to the new value, because the base_price is a float, we need to convert first
-                                            cur_price.innerText = 'Price: ' + (parseFloat(base_price, 10) + additional) + base_price.toString().slice(base_price.toString().length - 3, base_price.toString().length);
+                                            cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional) + base_price.toString().slice(base_price.toString().length - 3, base_price.toString().length);
                                         }
-
-                                        //Auto convert page price if missing decimals
-                                        {% if portion == 'dinner' %}
-                                        let page_price_int = {{ selected_item['Base Price'] }};
-
-                                        {% else %}
-
-                                        let page_price_int = {{ selected_item['Lunch_Version']['Base Price'] }};
-
-                                        {% endif %}
-                                        let page_price = document.getElementById('the_price');
-                                        page_price_int = ensure_2_decimals(page_price_int);
-                                        if(page_price_int.slice(page_price_int.length - 2, page_price_int.length) == '00'){
-                                            console.log(page_price_int);
-                                        } else {
-                                            //If it doesn't have a double 00, convert back to int
-                                            page_price_int = parseFloat(page_price_int, 10);
-                                        }
-                                        page_price.innerText = 'Price: ' + page_price_int;
                                     </script>
                                     <!--End price updater-->
 
