menu now tells when lunch

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -35,6 +35,11 @@
             <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
                 Click Images To Go To The Customization Page!
             </h2>
+            {% if lunchtime == true %}
+            <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
+                Lunch portions are currently available
+            </h3>
+            {% endif %}
         </div>
 
 
