all items built

--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -16,6 +16,15 @@
     </div>
 
     {% include 'universal-bottom.html' %}
+    <script src="{{ url_for('homepage.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/popper/popper.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/tether/tether.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/dropdown/js/script.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/parallax/jarallax.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/theme/js/script.js') }}"></script>
 </body>
 
 </html>
