--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -152,7 +152,7 @@
                         <p class="mbr-fonts-style display-5">
                             <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
                             <br>
-                            {% if delivery_minimum == True %}
+                            {% if delivery_minimum_met == true %}
                             <input type="radio" id="delivery" name="order_type" value="Delivery"> Delivery
                             {% else %}
                             Must meet $20 minimum for delivery
