--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -136,6 +136,8 @@
                                             let total_actual_price = (additional + base_price);
                                             total_actual_price = total_actual_price.toString();
 
+                                            console.log(topping, extra, extra_rice, cur_price, additional, total_actual_price);
+
                                             total_actual_price = total_actual_price.slice(0, total_actual_price.length - 2) + '.' + total_actual_price.slice(total_actual_price.length - 2, total_actual_price.length);
 
                                             cur_price.innerText = 'Price: $' + total_actual_price;
