--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -236,7 +236,7 @@
                                             <!-- Display "Chicken +$2" if extra price"-->
                                             Extra <select name="extra" id="extra" onchange="changePrice();">
                                                 {% for extra in selected_item['Extra'] %}
-                                                <option value="{{ extra[0] }}{% if extra[1] != 0 %}+${{ extra[1] }}{% endif %}">{{ extra[0] }}{% if extra[1] != 0 %} +${{ extra[1] }}{% endif %}</option>
+                                                <option value="{{ extra[0] }}{% if extra[1] != '0.00' %}+${{ extra[1] }}{% endif %}">{{ extra[0] }}{% if extra[1] != '0.00' %} +${{ extra[1] }}{% endif %}</option>
                                                 {% endfor %}
                                             </select>
                                             <br><br>
