--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -160,7 +160,7 @@
                             <br>
                         </p>
 
-                        <button href="" type="submit" class="btn btn-primary display-4">{% if is_currently_open is true %}Continue Checkout{% else %}We Are Currently Closed{% endif %}</button>
+                        <button href="" type="submit" class="btn btn-primary display-4">{% if is_currently_open == true %}Continue Checkout{% else %}We Are Currently Closed{% endif %}</button>
                     </form>
                 </div>
             </div>
